--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </table>
     </div>
 
-    <script src="/src/app.js"></script>
+    <script type="module" src="/src/app.js"></script>
     <script
       async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqAVIOA2GO-BOsv55Kz6TkqUSBbSLTkNg&callback=initMap"
