--- a/login.html
+++ b/login.html
@@ -31,6 +31,6 @@
         >
       </div>
     </div>
-    <script src="/src/login.js"></script>
+    <script type="module" src="/src/login.js"></script>
   </body>
 </html>
